<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".frags.MainFragment">

    <ImageView
        android:id="@+id/apod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/apod"
        android:adjustViewBounds="true"
        android:contentDescription="@string/apod"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/curiosity"
        android:scaleType="fitXY"
        android:src="@drawable/cur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apod" />

    <TextView
        android:id="@+id/curiosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/curiosity"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/cur"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/per"
        android:adjustViewBounds="true"
        android:contentDescription="@string/perseverance"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cur" />

    <TextView
        android:id="@+id/perseverance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/perseverance"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/per"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/opp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/opp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/opportunity"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/per" />

    <TextView
        android:id="@+id/opportunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/opportunity"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/opp"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/spi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/spi"
        android:adjustViewBounds="true"
        android:contentDescription="@string/spirit"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opp" />

    <TextView
        android:id="@+id/spirit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/spirit"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/spi"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/apd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/apod"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/apod"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/sol"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints="false"
        android:gravity="center"
        android:hint="@string/enter_sol"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginTop="75dp"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:textColor="@color/orange"
        android:textColorHint="#AC7422"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spi"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/height"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints="false"
        android:gravity="center"
        android:hint="Min Height"
        android:text="500"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginTop="75dp"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:textColor="@color/orange"
        android:textColorHint="#AC7422"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sol"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>